--- a/contributors/ttwf_seattle/noahcollins/submitted/css-vars-custom-property-case-sensitive-001.html
+++ b/contributors/ttwf_seattle/noahcollins/submitted/css-vars-custom-property-case-sensitive-001.html
@@ -10,8 +10,8 @@
     <style type="text/css">
         :root {
             /* these should be VALID custom property names */
-            var-veryblue:   #33c;
-            var-AlsoBlue:   #33c;
+            var-veryblue:   #22e;
+            var-AlsoBlue:   #22e;
 
             /* these should be INVALID custom property names */
             VAR-veryred:   #f00;
