--- a/html/semantics/forms/attributes-common-to-form-controls/disabled-elements-01.html
+++ b/html/semantics/forms/attributes-common-to-form-controls/disabled-elements-01.html
@@ -14,7 +14,7 @@ var types = ["button", "input", "select", "textarea"];
 var root = document.getElementById("root");
 for (var element_type = 0; element_type < types.length; element_type++) {
 	test(function() {
-		root.innerHTML = "<"+types[element_type]+" + id='elem'>";
+		root.innerHTML = "<"+types[element_type]+" + id='elem'></"+types[element_type]+">";
 
 		var elem = document.getElementById("elem");
 		assert_false(elem.disabled);
@@ -28,7 +28,7 @@ for (var element_type = 0; element_type < types.length; element_type++) {
 			"disabled='false'", "disabled=false"];
 
 		for (var f = 0; f < formats.length; f++) {
-			root.innerHTML = "<"+types[element_type]+" id='elem' " + formats[f] + ">";
+			root.innerHTML = "<"+types[element_type]+" id='elem' " + formats[f] + "></"+types[element_type]+">";
 
 			var elem = document.getElementById("elem");
 			assert_true(elem.disabled);
@@ -37,7 +37,7 @@ for (var element_type = 0; element_type < types.length; element_type++) {
 	"Test ["+types[element_type]+"]: verify disabled acts as boolean attribute");
 
 	test(function() {
-		root.innerHTML = "<"+types[element_type]+" id='elem'></"+types[element_type]+"><input id='other' value='pass' />";
+		root.innerHTML = "<"+types[element_type]+" id='elem'></"+types[element_type]+"><input id='other' value='pass'></input>";
 		var elem = document.getElementById("elem"),
 			other = document.getElementById("other");
 
