Fixing page <title>

--- a/html/dom/elements/global-attributes/data-attribute.html
+++ b/html/dom/elements/global-attributes/data-attribute.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-<title>input type checkbox</title>
+<title>HTML5 Data Attributes</title>
 <link rel="author" title="Gary Gao" href="mailto:angrytoast@gmail.com">
 <link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/dom.html#embedding-custom-non-visible-data-with-the-data-*-attributes">
 <script src="/resources/testharness.js"></script>
