--- a/contributors/ttwf_seattle/noahcollins/submitted/css-vars-custom-property-inheritance.html
+++ b/contributors/ttwf_seattle/noahcollins/submitted/css-vars-custom-property-inheritance.html
@@ -8,24 +8,27 @@
     <meta name="assert" content="custom properties are resolved with the normal inheritance and cascade rules">
     <link rel="match" href="reference/css-vars-custom-property-inheritance-ref.html">
     <style type="text/css">
-        :root  { var-color: #33c; }
-        div    { var-color: #669; }
-        h1     { var-color: #399; }
-        .alert { var-color: #606; }
 
-        .blue-good-1  { color: var(color); }
-        .blue-good-2  { color: var(color); }
-        .red-bad-1    { color: var(color); }
-        .red-bad-2    { color: var(color); }
+        /* test cascade importance */
+        :root { var-color: #1c1 !important; }
+        :root { var-color: red; }
+
+        /* test cascade order */
+        * { color: red; }
+
+        /* test cascade order */
+        * { color: var(color); }
+
+        /* test cascade specificity */
+        body p#something { color: red; }
+        body p#something span { color: var(color) } 
+
     </style>
 </head>
 <body>
-    <h2 class="blue-good-1">Valid CSS Variable Names</h2>
-    <p class="blue-good-1">This paragraph is styled using a valid CSS Variable name. It should be blue.</p>
-    <p class="blue-good-2">This paragraph is styled using a valid CSS Variable name. It should be blue.</p>
-    <br>
-    <h2 class="red-bad-1">Invalid CSS Variable Names</h2>
-    <p class="red-bad-1">This paragraph is styled using an invalid CSS Variable name. Fail if red.</p>
-    <p class="red-bad-2">This paragraph is styled using an invalid CSS Variable name. Fail if red.</p>
+    <p>Green</p>
+    <p>Green</p>
+    <p id="something">Green <span>Green</span></p>
+    <p>The test passes if everything is green. Any red means the test failed.</p>
 </body>
 </html>
