--- a/eventsource/event-data.html
+++ b/eventsource/event-data.html
@@ -20,27 +20,27 @@ Process the field using the steps described below, using the whole line as the f
   <body>
     <div id="log"></div>
     <script>
-      var test = async_test(document.title)
+      var test = async_test(document.title);
       test.step(function() {
         var source = new EventSource("resources/message2.py"),
-        counter = 0
-        source.onmessage = function(e) {
-        test.step(function() {
+            counter = 0;
+        source.onmessage = test.step_func(function(e) {
+          test.step(function() {
             if(counter == 0) {
-              assert_equals(e.data,"msg\nmsg")
+              assert_equals(e.data,"msg\nmsg");
             } else if(counter == 1) {
-              assert_equals(e.data,"")
+              assert_equals(e.data,"");
             } else if(counter == 2) {
-                assert_equals(e.data,"end")
-                source.close()
-                test.done()
-              } else {
-                assert_unreached()
+              assert_equals(e.data,"end");
+              source.close();
+              test.done();
+            } else {
+              assert_unreached();
             }
-            counter++
+            counter++;
           })
-        }
-      })
+        });
+      });
     </script>
   </body>
 </html>
