--- a/html/editing/dnd/the-dropzone-attribute/dropzone_attribute.html
+++ b/html/editing/dnd/the-dropzone-attribute/dropzone_attribute.html
@@ -5,6 +5,7 @@
     <title>HTML Test: dropzone_attribute</title>
     <link rel='author' title='Intel' href='http://www.intel.com'>
     <link rel='help' href='http://www.w3.org/html/wg/drafts/html/CR/editing.html#the-dropzone-attribute'>
+    <meta name="flags" content="may">
     <script src='/resources/testharness.js'></script>
     <script src='/resources/testharnessreport.js'></script>
   </head>
