--- a/html/editing/dnd/the-dropzone-attribute/dropzone_attribute_data_item_file_type.html
+++ b/html/editing/dnd/the-dropzone-attribute/dropzone_attribute_data_item_file_type.html
@@ -22,8 +22,8 @@
   </head>
   
   <body>
-    <img src='support/cat.png' alt='a cat image' />
-    <div>Save the cat image (image/png) above to your desktop, drag the image from desktop to the blue text to rectangular box in browser.</div>
+    <img src='/images/blue.png' alt='blue image' />
+    <div>Save the blue image (image/png) above to your desktop, drag the image from desktop to the blue text to rectangular box in browser.</div>
     <div id='drop' dropzone='copy file:image/png'></div>
     <div id='log'> </div>
 
