--- a/shadow-dom/user-interaction/focus-navigation/test-002.html
+++ b/shadow-dom/user-interaction/focus-navigation/test-002.html
@@ -56,7 +56,7 @@ A_07_02_02_T01.step(unit(function (ctx) {
 
 	var chb3 = d.createElement('input');
 	chb3.setAttribute('type', 'checkbox');
-	chb3.setAttribute('id', 'chb2');
+	chb3.setAttribute('id', 'chb3');
 	chb3.setAttribute('class', 'shadow');
 	chb3.addEventListener('focus', A_07_02_02_T01.step_func(function(event) {
 		assert_equals(counter++, 1, 'Point 2: wrong focus navigation order');
@@ -95,7 +95,7 @@ A_07_02_02_T01.step(unit(function (ctx) {
 
 	var chb4 = d.createElement('input');
 	chb4.setAttribute('type', 'checkbox');
-	chb4.setAttribute('id', 'chb2');
+	chb4.setAttribute('id', 'chb4');
 	chb4.addEventListener('focus', A_07_02_02_T01.step_func(function(event) {
 		assert_equals(counter++, 4, 'Point 5: wrong focus navigation order');
 		invoked[5] = true;
@@ -118,7 +118,7 @@ A_07_02_02_T01.step(unit(function (ctx) {
 
 	for (var i = 1; i < invoked.length; i++) {
 		if (!invoked[i]) {
-			assert_true(false, 'Piont ' + i + ' event listener was not invoked');
+			assert_true(false, 'Point ' + i + ' event listener was not invoked');
 		}
 	}
 
