Update the event registeration method as review sugguestion

--- a/html/semantics/forms/the-button-element/button-events.html
+++ b/html/semantics/forms/the-button-element/button-events.html
@@ -21,30 +21,30 @@ var btn = document.getElementById("btn"),
     t2 = async_test("The reset event must be fired when click a button in reset status"),
     t3 = async_test("The show event must be fired when click a button in menu status");
 
-document.forms.fm1.addEventListener("submit", t1.step_func(function (evt) {
+document.forms.fm1.onsubmit = t1.step_func(function (evt) {
   evt.preventDefault();
   assert_true(evt.isTrusted, "The isTrusted attribute of the submit event shoud be true.");
   assert_true(evt.bubbles, "The bubbles attribute of the submit event shoud be true.");
   assert_true(evt.cancelable, "The cancelable attribute of the submit event shoud be true.");
   assert_true(evt instanceof Event, "The submit event is an instance of Event interface.");
   t1.done();
-}));
+});
 
-document.forms.fm1.addEventListener("reset", t2.step_func(function (evt) {
+document.forms.fm1.onreset = t2.step_func(function (evt) {
   assert_true(evt.isTrusted, "The isTrusted attribute of the reset event shoud be true.");
   assert_true(evt.bubbles, "The bubbles attribute of the reset event shoud be true.");
   assert_true(evt.cancelable, "The cancelable attribute of the reset event shoud be true.");
   assert_true(evt instanceof Event, "The reset event is an instance of Event interface.");
   t2.done();
-}));
+});
 
-document.getElementById("menu").addEventListener ("show", t3.step_func(function (evt) {
+document.getElementById("menu").onshow = t3.step_func(function (evt) {
   assert_true(evt.isTrusted, "The isTrusted attribute of the show event shoud be true.");
   assert_equals(evt.relatedTarget, menu_btn, "The relatedTarget attribute should be initialized to the related button element.");
   assert_true(evt.cancelable, "The cancelable attribute of the show event shoud be true.");
   assert_true(evt instanceof RelatedEvent, "The show event is an instance of RelatedEvent interface.");
   t3.done();
-}));
+});
 
 t1.step(function () {
   btn.type = "submit";
