improving tests according to Dominic's notes

--- a/custom-elements/creating-and-passing-registries/share-registry-import-document.html
+++ b/custom-elements/creating-and-passing-registries/share-registry-import-document.html
@@ -19,10 +19,12 @@ testInIFrame('../resources/import-master.html', function(doc) {
     var doc2 = link.import;
     var name = 'x-frame';
     doc.registerElement(name);
-    assert_throws('NotSupportedError', function () {
-        doc2.registerElement(name);
-    }, 'Registering a custom element type name that is already registered in a shared ' +
-        'registry should throw an exception');
+    assert_throws(
+        'NotSupportedError',
+        function () { doc2.registerElement(name); },
+        'Registering a custom element type name that is already registered in a shared ' +
+            'registry should throw an exception');
+
 }, 'Registry of the import should share master document registry');
 
 
@@ -30,20 +32,14 @@ testInIFrame('../resources/import-master.html', function(doc) {
     var link = doc.querySelector('link[rel=import]');
     var doc2 = link.import;
     var name = 'x-frame';
-    doc.registerElement(name);
-    assert_throws('NotSupportedError', function () {
-        doc2.registerElement(name);
-    }, 'Registering a custom element type name that is already registered in a shared ' +
-        'registry should throw an exception');
+    doc2.registerElement(name);
+    assert_throws(
+        'NotSupportedError',
+        function () { doc.registerElement(name); },
+        'Registering a custom element type name that is already registered in a shared ' +
+            'registry should throw an exception');
 
-    var doc3 = newHTMLDocument();
-    try {
-        doc3.registerElement(name);
-    } catch (e) {
-        assert_unreached('Unexpected exception while registering a valid custom element ' +
-            'in a document which has it\'s own registry');
-    }
-}, 'Registry of the import should share master document registry only');
+}, 'Registry of the master document should be shared with imported document\'s registry');
 
 </script>
 </body>
