Addressing mibalan's issues underlined in the review.

--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-text.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-text.html
@@ -25,7 +25,7 @@
                 margin-top: -60px;
                 mix-blend-mode: difference;
             }
-            .txt {
+            .text {
                 height: 60px;
                 color: #F00;
             }
@@ -37,7 +37,7 @@
     <body>
         <p>Test passes if a yellow square with green text is drawn over a lightgray background.</p>
         <div class="parent">
-            <div class="txt">Red text that becomes green after blending </div>
+            <div class="text">Red text that becomes green after blending </div>
             <div class="blender"></div>
         </div>
     </body>
