--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-overflowing-child.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-overflowing-child.html
@@ -6,7 +6,7 @@
         <link rel="reviewer" title="Mihai Balan" href="mailto:mibalan@adobe.com">
         <link rel="reviewer" title="Horia Olaru" href="mailto:olaru@adobe.com">
         <link rel="help" href="http://dev.w3.org/fxtf/compositing-1/#mix-blend-mode">
-        <meta name="assert" content="Test checks that an overflowing element with mix-blend-mode blends correctly.">
+        <meta name="assert" content="Test checks that an overflowing element with mix-blend-mode blends with the parent element.">
         <meta name="flags" content=""/>
         <link rel="match" href="reference/mix-blend-mode-overflowing-child-ref.html">
         <style type="text/css">
