--- a/shadow-dom/styles/test-007.html
+++ b/shadow-dom/styles/test-007.html
@@ -31,10 +31,7 @@ policies and contribution forms [3].
 test(unit(function (ctx) {
 	var d = newRenderedHTMLDocument(ctx);
 
-    d.head.innerHTML = '' +
-			':host {' +
-				'div {display:none;}' +
-			'}';
+    d.head.innerHTML = ':host {display:none;}';
 
     d.body.innerHTML =
     	'<ul class="cls">' +
@@ -54,7 +51,7 @@ test(unit(function (ctx) {
 	div.innerHTML ='<ul><content select=".shadow"></content></ul>';
 	s.appendChild(div);
 
-	//@host rule shouldn't take any effect
+	//:host rule shouldn't take any effect
 	assert_true(d.querySelector('#li1').offsetTop > 0,
 		'Point 1: element should be rendered');
 	assert_true(d.querySelector('#li3').offsetTop > 0,
@@ -88,17 +85,14 @@ test(unit(function (ctx) {
 	s.appendChild(div);
 
 	var style = d.createElement('style');
-    style.innerHTML = '' +
-			':host {' +
-				'ul {display:none;}' +
-			'}';
+    style.innerHTML = ':host ul {display:none;}';
 	s.appendChild(style);
 
-	assert_true(d.querySelector('#li1').offsetTop > 0,
+	assert_equals(d.querySelector('#li1').offsetTop, 0,
 		'Point 1: element should be rendered');
-	assert_true(d.querySelector('#li3').offsetTop > 0,
+	assert_equals(d.querySelector('#li3').offsetTop, 0,
 		'Point 2: element should be rendered');
-	assert_true(d.querySelector('#li5').offsetTop > 0,
+	assert_equals(d.querySelector('#li5').offsetTop, 0,
 		'Point 3: element should be rendered');
 
 
@@ -110,6 +104,7 @@ test(unit(function (ctx) {
 	var d = newRenderedHTMLDocument(ctx);
 
     var host = d.createElement('div');
+    host.className = 'gone';
     d.body.appendChild(host);
 
 	//Older tree
@@ -126,10 +121,7 @@ test(unit(function (ctx) {
 	s2.appendChild(div1);
 
 	var style = d.createElement('style');
-    style.innerHTML = '' +
-			':host {' +
-				'div{display:none;}' +
-			'}';
+    style.innerHTML = ':host {display:none;}';
 	s2.appendChild(style);
 
 	assert_equals(s1.querySelector('#shd1').offsetTop, 0,
