improving tests according to Dominic's notes fixing line endings

--- a/custom-elements/creating-and-passing-registries/new-registry-test.html
+++ b/custom-elements/creating-and-passing-registries/new-registry-test.html
@@ -21,7 +21,6 @@ testInIFrame('../resources/blank.html', function(doc) {
     } catch (e) {
         assert_unreached('Unexpected exception, while registering a valid custom element');
     }
-
 }, 'Document, loaded into browsing context, must have a new empty registry');
 
 
@@ -35,9 +34,8 @@ testInIFrame('../resources/blank.html', function(loadedDocument) {
         assert_unreached('Unexpected exception while registering a custom element ' +
             'in a document, which has it\'s own registry');
     }
-
 }, 'Document, loaded into browsing context, must have a new empty registry, ' +
-   'which is different from other document\'s registries');
+        'which is different from other documents\' registries');
 
 </script>
 </body>
