--- a/html/semantics/embedded-content-0/media-elements/interfaces/TextTrack/addCue.html
+++ b/html/semantics/embedded-content-0/media-elements/interfaces/TextTrack/addCue.html
@@ -57,6 +57,9 @@ t.step(function(){
         assert_equals(cue.track, t1);
         t.done();
     });
+    track.onerror = t.step_func(function() {
+      assert_unreached('got error event');
+    });
     track.src= 'data:text/vtt,'+encodeURIComponent('WEBVTT\n\n00:00:00.000 --> 00:00:01.000\ntest\n');
     track.kind = 'subtitles';
     track.track.mode = 'hidden';
