--- a/html/semantics/embedded-content-0/media-elements/interfaces/TextTrackCue/pauseOnExit.html
+++ b/html/semantics/embedded-content-0/media-elements/interfaces/TextTrackCue/pauseOnExit.html
@@ -30,6 +30,9 @@ t_parsed.step(function(){
         assert_equals(c1.pauseOnExit, true);
         this.done();
     });
+    t.onerror = this.step_func(function() {
+      assert_unreached('got error event');
+    });
     t.src = 'data:text/vtt,'+encodeURIComponent('WEBVTT\n\n00:00:00.000 --> 00:00:00.001\ntest');
     t.track.mode = 'showing';
     video.appendChild(t);
