--- a/html/semantics/embedded-content-0/media-elements/interfaces/VTTCue/align.html
+++ b/html/semantics/embedded-content-0/media-elements/interfaces/VTTCue/align.html
@@ -42,6 +42,9 @@ t_parsed.step(function(){
         assert_equals(c4.align, 'end');
         this.done();
     });
+    t.onerror = this.step_func(function() {
+      assert_unreached('got error event');
+    });
     t.src = 'data:text/vtt,'+encodeURIComponent('WEBVTT\n\n00:00:00.000 --> 00:00:00.001\ntest\n\n'+
                                                 '00:00:00.000 --> 00:00:00.001 align:start\ntest\n\n'+
                                                 '00:00:00.000 --> 00:00:00.001 align:middle\ntest\n\n'+
