--- a/html/semantics/embedded-content-0/media-elements/track/track-element/cloneNode.html
+++ b/html/semantics/embedded-content-0/media-elements/track/track-element/cloneNode.html
@@ -4,7 +4,7 @@
 <script src="/resources/testharnessreport.js"></script>
 <div id=log></div>
 <script>
-test(function(t) {
+test(function() {
     var elm = document.createElement('track');
     assert_equals(elm.readyState, elm.NONE, 'elm.readyState after element creation');
     var clone = elm.cloneNode(true);
