--- a/FileAPI/idlharness-manual.html
+++ b/FileAPI/idlharness-manual.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>File API automated IDL tests</title>
+    <title>File API manual IDL tests</title>
     <link rel="author" title="Intel" href="http://www.intel.com">
     <link rel="help" href="http://dev.w3.org/2006/webapi/FileAPI/#conformance">
     <script src="/resources/testharness.js"></script>
@@ -11,7 +11,19 @@
     <script src="/resources/idlharness.js"></script>
   </head>
   <body>
-    <h1>File API automated IDL tests</h1>
+    <h1>File API manual IDL tests</h1>
+
+    <div>
+      <p>Test steps:</p>
+      <ol>
+        <li>Download <a href="support/upload.txt">upload.txt</a> to local.</li>
+        <li>Select the local upload.txt file to run the test.</li>
+      </ol>
+    </div>
+
+    <form name="uploadData">
+      <input type="file" id="fileChooser">
+    </form>
 
     <div id="log"></div>
 
@@ -104,20 +116,25 @@
     </pre>
 
     <script>
-      var idl_array;
+      var fileInput;
 
       setup(function() {
-        idl_array = new IdlArray();
+        fileInput = document.querySelector("#fileChooser")
+      }, {explicit_done: true, explicit_timeout: true});
+
+      on_event(fileInput, "change", function(evt) {
+        var idl_array = new IdlArray();
         idl_array.add_untested_idls(document.getElementById("untested_idl").textContent);
         idl_array.add_idls(document.getElementById("idl").textContent);
 
         idl_array.add_objects({
-          Blob: [new Blob(["TEST"])],
-          FileReader: [new FileReader()]
+          FileList: [fileInput.files],
+          File: [fileInput.files[0]],
         });
-      });
+        idl_array.test();
 
-      idl_array.test();
+        done();
+      });
     </script>
   </body>
 </html>
